styles/Landing.module.scss
.intro {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  margin-top: 12vh;
  text-align: center;
  line-height: 1;
  font-size: 20vw;
  color: var(--c-dark-2);
  font-weight: 700;
}

.title {
  position: relative;
  margin-top: 2.5vh;
  padding: 0 1.25rem;
  text-align: center;
  font-size: 2rem;
  color: #fff;
  line-height: 1.2;
  white-space: nowrap;
}

.title .cta {
  cursor: pointer;
  color: white;
  background: #000;
  padding: 11px 18px;
  font-size: 1rem;
  transition: background 0.25s ease-in 0.15s;
  margin-top: 2.5vh;
  position: absolute;
  top: 100%;
  left: 50%;
  transform: translate(-50%, 75%);
}

.title .cta:hover {
  @apply bg-c-blue-1;
}

.intro__hi {
  white-space: nowrap;
}

@media only screen and (min-width: 580px) {
  .intro {
    @apply text-c-dark-2;
    font-size: 7.5rem;
  }

  .title {
    font-size: 2.6rem;
  }
}

@media only screen and (min-width: 980px) {
  .intro {
    font-size: 11.6rem;
    left: 50%;
    top: 50%;
    line-height: 0.9;
    position: absolute;
    margin: 0;
    transform: translate(-50%, -50%);
  }

  .title {
    color: white;
    font-size: 3.25rem;
    left: 50%;
    position: absolute;
    text-align: center;
    top: 50%;
    transform: translate(-50%, -50%);
  }

  .title .cta {
    position: absolute;
    top: 100%;
    left: 50%;
    transform: translate(-50%, 85%);
  }
}

.cta {
  @apply bg-c-blue-1;
}

